Version 1.11.0-RC1 2022-12-29

Chpego and SzczepanLeon improved the HA-addon. Thanks!

Ranma added support for the pollcumqheat 55 driver. Thanks Ranma!

Jacek27 added another Munia temp/hygrometer version. Thanks Jacek27!

Version 1.10.2 2022-12-05

Stefan Rado improved the mqtt discovery for HA. Thanks Stefan!

Bibo improved the snap build process. Thanks Bibo!

Version 1.10.1 2022-12-05

Fix bug that prevented a direct tty link: /dev/ttyUSB0:device:t1 to work.

Version 1.10.0 2022-12-05

  ╭─────────────────────────────────────────────────────────────────╮
  │                                                                 │
  │                 Important change! The old style                 │
  │      of writing drivers is now gone! BUT BUT BUT                │
  │           the final set of drivers to be converted were         │
  │        the multical 302/303/403/602/603/803 meters that         │
  │     were merged into a single kamheat driver. It was not        │
  │    possible to keep all of them backwards compatible!           │
  │                                                                 │
  │   Note that the default fields for these meters are changed!    │
  │      Please use --selectfields to resolve this.                 │
  │                                                                 │
  │      I.e. It is a very good idea to check your multical heat    │
  │     meter values when you upgrade to wmbusmeters 1.10 !         │
  │                                                                 │
  ╰─────────────────────────────────────────────────────────────────╯

Important change! The feature --addconversions=GJ has been removed!!! But there is a replacement!
It was used to add conversions to all energy values into gj, eg you have
total_kwh and add total_gj.

The addconversion feature was too broad and the conversion happened too late in the processing code.