@@ -1,3 +1,6 @@
+
+Improve release process.
+
 Version 1.11.0-RC1 2022-12-29
 
 Chpego and SzczepanLeon improved the HA-addon. Thanks!
